Resolves #363 use JDK 16, Wicket 9, Spring boot 2.4